Automatic link replacement via "Smart links" should emit "insertLink" input events https://bugs.webkit.org/show_bug.cgi?id=191306 Source/WebCore:

<rdar://problem/58491514>

Patch by Nikos Mouchtaris <nmouchtaris@apple.com> on 2020-01-22
Reviewed by Wenson Hsieh.

Added support for outputting "insertLink" for input type and the url for the
data of the input event when smart link is used.

Test: fast/events/input-event-insert-link.html

* editing/CreateLinkCommand.h:
* editing/EditCommand.cpp:
(WebCore::inputTypeNameForEditingAction):

LayoutTests:

Patch by Nikos Mouchtaris <nmouchtaris@apple.com> on 2020-01-22
Reviewed by Wenson Hsieh.

Due to webkit.org/b/162081 this test is skipped for WebKit2.

* fast/events/input-event-insert-link-expected.txt: Added.
* fast/events/input-event-insert-link.html: Added.
* platform/gtk/TestExpectations:
* platform/ios/TestExpectations:
* platform/mac-wk2/TestExpectations:
* platform/win/TestExpectations:
* platform/wincairo/TestExpectations:

Canonical link: https://commits.webkit.org/219661@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@254945 268f45cc-cd09-0410-ab3c-d52691b4dbfc